unpackaged/main/default/objects/Opportunity/fields/Legacy_ACV__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ACV__c</fullName>
    <label>Legacy ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>