unpackaged/main/default/objects/Opportunity/fields/Legacy_MRR_Commit__c.field-meta.xml
<CustomField>
    <fullName>Legacy_MRR_Commit__c</fullName>
    <description>Used to store the value from Legacy Opportunities that do not have Primary Quotes.</description>
    <label>Legacy MRR Commit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>