unpackaged/main/default/objects/Opportunity/fields/Legacy_Previous_Renewal_Y2_months_val__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Previous_Renewal_Y2_months_val__c</fullName>
    <description>Used to store the value from Legacy Opportunities that do not have a Primary (SBQQ) Quote.</description>
    <label>Legacy Previous Renewal Y2 (months) val</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>