unpackaged/main/default/objects/Opportunity/fields/Legacy_Pub_Contract_Terms_months__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Pub_Contract_Terms_months__c</fullName>
    <description>Used to store the value from Legacy Opportunities that do not have a Primary (SBQQ) Quote.</description>
    <label>Legacy Pub Contract Terms (months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>