unpackaged/main/default/objects/Opportunity/fields/Legacy_Renewing_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Renewing_Contract_End_Date__c</fullName>
    <description>Used to store the value from Legacy Opportunities that do not have a Primary (SBQQ) Quote.</description>
    <label>Legacy Renewing Contract End Date</label>
    <type>Date</type>
</CustomField>