unpackaged/main/default/objects/Opportunity/fields/Legacy_TCV__c.field-meta.xml
<CustomField>
    <fullName>Legacy_TCV__c</fullName>
    <description>Used to store the value from Legacy Opportunities that do not have a Primary (SBQQ) Quote.</description>
    <label>Legacy TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>