unpackaged/main/default/objects/Opportunity/fields/Legacy_USD_MRR_Commit__c.field-meta.xml
<CustomField>
    <fullName>Legacy_USD_MRR_Commit__c</fullName>
    <description>Used to store the value from Legacy Opportunities that do not have a Primary (SBQQ) Quote.</description>
    <label>Legacy USD MRR Commit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>