unpackaged/main/default/objects/Opportunity/fields/Live_Event_Hours_per_Year__c.field-meta.xml
<CustomField>
    <fullName>Live_Event_Hours_per_Year__c</fullName>
    <inlineHelpText>This field is automatically populated based on the support package chosen.</inlineHelpText>
    <label>Live Event Hours per Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>16</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>