unpackaged/main/default/objects/Opportunity/fields/Manual_ACV__c.field-meta.xml
<CustomField>
    <fullName>Manual_ACV__c</fullName>
    <label>Manual ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>