unpackaged/main/default/objects/Opportunity/fields/Manual_TCV__c.field-meta.xml
<CustomField>
    <fullName>Manual_TCV__c</fullName>
    <label>Manual TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>