unpackaged/main/default/objects/Opportunity/fields/Marketplace_Integration__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_Integration__c</fullName>
    <description>SELECT ALL of the integrations (Built by the Partner or Brightcove) that are part of the deal.</description>
    <label>Marketplace Integration</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Marketplace Integration</fullName>
            </value>
            <value>
                <fullName>3Play Media Captions / Translations</fullName>
            </value>
            <value>
                <fullName>Accedo</fullName>
            </value>
            <value>
                <fullName>Adobe Analytics Plugin for Brightcove</fullName>
            </value>
            <value>
                <fullName>Adobe Experience Manager</fullName>
            </value>
            <value>
                <fullName>Adobe Magento Commerce Extension</fullName>
            </value>
            <value>
                <fullName>Adobe Marketo Engage for Campaign</fullName>
            </value>
            <value>
                <fullName>Annoto</fullName>
            </value>
            <value>
                <fullName>Apple Fairplay</fullName>
            </value>
            <value>
                <fullName>Aprimo DAM</fullName>
            </value>
            <value>
                <fullName>Beacon Payment Processing with Stripe</fullName>
            </value>
            <value>
                <fullName>Blackbird</fullName>
            </value>
            <value>
                <fullName>BlueRush / IndiVideo</fullName>
            </value>
            <value>
                <fullName>Brightcove Hootsuite Connector</fullName>
            </value>
            <value>
                <fullName>CaptionHub</fullName>
            </value>
            <value>
                <fullName>CaptionSync</fullName>
            </value>
            <value>
                <fullName>CatapultX</fullName>
            </value>
            <value>
                <fullName>Cisco WebEx</fullName>
            </value>
            <value>
                <fullName>Cleeng</fullName>
            </value>
            <value>
                <fullName>CLIPr</fullName>
            </value>
            <value>
                <fullName>Curriki</fullName>
            </value>
            <value>
                <fullName>Cvent</fullName>
            </value>
            <value>
                <fullName>Drupal Video Connect</fullName>
            </value>
            <value>
                <fullName>EMAM, Inc</fullName>
            </value>
            <value>
                <fullName>Evergent</fullName>
            </value>
            <value>
                <fullName>Freewheel Player Plugin</fullName>
            </value>
            <value>
                <fullName>Glide Publishing Platform</fullName>
            </value>
            <value>
                <fullName>Google Ad Server</fullName>
            </value>
            <value>
                <fullName>Google Analytics Plugin for Brightcove</fullName>
            </value>
            <value>
                <fullName>Google Tag Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>