unpackaged/main/default/objects/Opportunity/fields/Meeting_Pending_Stage_Set_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Pending_Stage_Set_Date__c</fullName>
    <label>Meeting Pending Stage Set Date</label>
    <type>DateTime</type>
</CustomField>