unpackaged/main/default/objects/Opportunity/fields/Meeting_Scheduled_Stage_Set_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Scheduled_Stage_Set_Date__c</fullName>
    <label>Meeting Scheduled Stage Set Date</label>
    <type>DateTime</type>
</CustomField>