unpackaged/main/default/objects/Opportunity/fields/MRR_Commit__c.field-meta.xml
<CustomField>
    <fullName>MRR_Commit__c</fullName>
    <label>MRR Commit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>