unpackaged/main/default/objects/Opportunity/fields/MRR_Upside__c.field-meta.xml
<CustomField>
    <fullName>MRR_Upside__c</fullName>
    <label>MRR Upside</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>