unpackaged/main/default/objects/Opportunity/fields/Mutual_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Mutual_Action_Plan__c</fullName>
    <inlineHelpText>What is our Mutual Action Plan to turn the Opportunity into Revenue?
Provide the URL to the google drive folder containing Joint Success Plan document.</inlineHelpText>
    <label>Joint Success Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>