unpackaged/main/default/objects/Opportunity/fields/Negotiation_Stage_Set_Date__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Stage_Set_Date__c</fullName>
    <label>Negotiation Stage Set Date</label>
    <type>DateTime</type>
</CustomField>