unpackaged/main/default/objects/Opportunity/fields/New_Contract_is_Auto_Renew__c.field-meta.xml
<CustomField>
    <fullName>New_Contract_is_Auto_Renew__c</fullName>
    <formula>IF(SBQQ__PrimaryQuote__r.Auto_Renew__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <label>New Contract is Auto-Renew</label>
    <type>Text</type>
</CustomField>