unpackaged/main/default/objects/Opportunity/fields/Notes_history__c.field-meta.xml
<CustomField>
    <fullName>Notes_history__c</fullName>
    <label>Notes history</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>