unpackaged/main/default/objects/Opportunity/fields/Notes_reason_win_loss__c.field-meta.xml
<CustomField>
    <fullName>Notes_reason_win_loss__c</fullName>
    <label>Notes Reason Win/Loss</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>