unpackaged/main/default/objects/Opportunity/fields/Number_of_Titles__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Titles__c</fullName>
    <inlineHelpText>This is the amount of video titles that will get migrated</inlineHelpText>
    <label>Number of Titles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>