unpackaged/main/default/objects/Opportunity/fields/Onboarding_Engagement_Manager__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Engagement_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding Engagement Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>