unpackaged/main/default/objects/Opportunity/fields/Onboarding_Kick_off_Call_Customer__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Kick_off_Call_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer Onboarding Kick-off Call Scheduled?</description>
    <inlineHelpText>Customer Onboarding Kick-off Call Scheduled?</inlineHelpText>
    <label>Onboarding Kick-off Call (Customer)</label>
    <type>Checkbox</type>
</CustomField>