unpackaged/main/default/objects/Opportunity/fields/Onboarding_Kick_off_Call_Internal__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Kick_off_Call_Internal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal Onboarding Kick-off Call Scheduled?</description>
    <inlineHelpText>Internal Onboarding Kick-off Call Scheduled?</inlineHelpText>
    <label>Onboarding Kick-off Call (Internal)</label>
    <type>Checkbox</type>
</CustomField>