unpackaged/main/default/objects/Opportunity/fields/Onboarding_Kick_off_Deck_Completed__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Kick_off_Deck_Completed__c</fullName>
    <description>Customer Onboarding Kick-off Deck Completed?</description>
    <inlineHelpText>Customer Onboarding Kick-off Deck Completed?</inlineHelpText>
    <label>Onboarding Kick-off Deck</label>
    <type>Url</type>
</CustomField>