unpackaged/main/default/objects/Opportunity/fields/Onboarding_Roles_Responsibilities_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Roles_Responsibilities_Matrix__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer Onboarding Roles/Responsibilities Matrix Completed ?</description>
    <inlineHelpText>Customer Onboarding Roles/Responsibilities Matrix Completed?</inlineHelpText>
    <label>Onboarding Roles/Responsibilities Matrix</label>
    <type>Checkbox</type>
</CustomField>