unpackaged/main/default/objects/Opportunity/fields/Opp_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Opp_Owner_Role__c</fullName>
    <formula>Owner.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Owner Role</label>
    <type>Text</type>
</CustomField>