unpackaged/main/default/objects/Opportunity/fields/Opty_Invoice_Email_s__c.field-meta.xml
<CustomField>
    <fullName>Opty_Invoice_Email_s__c</fullName>
    <label>Opty Invoice Email s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>