unpackaged/main/default/objects/Opportunity/fields/Owner_Division__c.field-meta.xml
<CustomField>
    <fullName>Owner_Division__c</fullName>
    <label>Owner Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>