unpackaged/main/default/objects/Opportunity/fields/Owner_Sub_Division__c.field-meta.xml
<CustomField>
    <fullName>Owner_Sub_Division__c</fullName>
    <label>Owner Sub Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>