unpackaged/main/default/objects/Opportunity/fields/Partner_Source__c.field-meta.xml
<CustomField>
    <fullName>Partner_Source__c</fullName>
    <label>Partner Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Sourced</fullName>
            </value>
            <value>
                <fullName>Brightcove Sourced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>