unpackaged/main/default/objects/Opportunity/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Master License Partner</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Solution Partner</fullName>
            </value>
            <value>
                <fullName>Technology Partner</fullName>
            </value>
            <value>
                <fullName>Technology Partner - BC Reselles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>