unpackaged/main/default/objects/Opportunity/fields/Pipeline_Status__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Status__c</fullName>
    <formula>IF (
CONTAINS(TEXT(StageName),&quot;Closed&quot;),
IF (ISPICKVAL(StageName, &quot;Closed Won&quot;), &quot;Closed Won&quot;, &quot;Closed Lost&quot;),
TEXT(Forecast__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pipeline Status</label>
    <type>Text</type>
</CustomField>