unpackaged/main/default/objects/Opportunity/fields/Potential_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Potential_Solutions__c</fullName>
    <label>Potential Solutions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>Retranscode</fullName>
            </value>
            <value>
                <fullName>Master Deletion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>