unpackaged/main/default/objects/Opportunity/fields/Previous_Renewal_Y2_months_value__c.field-meta.xml
<CustomField>
    <fullName>Previous_Renewal_Y2_months_value__c</fullName>
    <description>Used to store the value from Legacy Opportunities that do not have a Primary (SBQQ) Quote.</description>
    <formula>IF(NOT(ISNULL(SBQQ__RenewedContract__c)), SBQQ__RenewedContract__r.SBQQ__Opportunity__r.Pub_Contract_Terms_Y2_months__c, IF(ISNULL(Legacy_Previous_Renewal_Y2_months_val__c), 0, Legacy_Previous_Renewal_Y2_months_val__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Renewal Y2 (months) value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>