unpackaged/main/default/objects/Opportunity/fields/Pricebook_Name__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Name__c</fullName>
    <formula>SBQQ__PrimaryQuote__r.Pricebook_Name__c</formula>
    <inlineHelpText>This is the pricebook on the primary quote.</inlineHelpText>
    <label>Pricebook Name</label>
    <type>Text</type>
</CustomField>