unpackaged/main/default/objects/Opportunity/fields/Pub_Contract_Terms_Y2_months__c.field-meta.xml
<CustomField>
    <fullName>Pub_Contract_Terms_Y2_months__c</fullName>
    <formula>IF(Has_Primary_Quote__c, IF(SBQQ__PrimaryQuote__r.SBQQ__SubscriptionTerm__c &gt; 12, SBQQ__PrimaryQuote__r.SBQQ__SubscriptionTerm__c - 12, 0), IF(ISNULL(Legacy_Pub_Contract_Terms_Y2_months__c), 0, Legacy_Pub_Contract_Terms_Y2_months__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pub Contract Terms Y2 (months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>