unpackaged/main/default/objects/Opportunity/fields/Pubisher_Onboarding_POP_Gold__c.field-meta.xml
<CustomField>
    <fullName>Pubisher_Onboarding_POP_Gold__c</fullName>
    <label>Publisher Onboarding (POP) Gold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>