unpackaged/main/default/objects/Opportunity/fields/Pubisher_Onboarding_POP_Silver__c.field-meta.xml
<CustomField>
    <fullName>Pubisher_Onboarding_POP_Silver__c</fullName>
    <label>Publisher Onboarding (POP) Silver</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>