unpackaged/main/default/objects/Opportunity/fields/Publisher_Onboarding_POP_JumpStart__c.field-meta.xml
<CustomField>
    <fullName>Publisher_Onboarding_POP_JumpStart__c</fullName>
    <label>Publisher Onboarding (POP) JumpStart</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>