unpackaged/main/default/objects/Opportunity/fields/Publisher_Onboarding_POP_VMS__c.field-meta.xml
<CustomField>
    <fullName>Publisher_Onboarding_POP_VMS__c</fullName>
    <label>Publisher Onboarding (POP) VMS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>