unpackaged/main/default/objects/Opportunity/fields/Pursuit_Lead__c.field-meta.xml
<CustomField>
    <fullName>Pursuit_Lead__c</fullName>
    <label>Pursuit Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Erica Wight</fullName>
            </value>
            <value>
                <fullName>Eric Knutson</fullName>
            </value>
            <value>
                <fullName>James Livingstone</fullName>
            </value>
            <value>
                <fullName>Mark Lendrum</fullName>
            </value>
            <value>
                <fullName>Sudheer Parameswaran</fullName>
            </value>
            <value>
                <fullName>Toshi Kuniya</fullName>
            </value>
            <value>
                <fullName>Ben Lupton</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>