unpackaged/main/default/objects/Opportunity/fields/Qualifier_Role__c.field-meta.xml
<CustomField>
    <fullName>Qualifier_Role__c</fullName>
    <label>Qualifier Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BDR</fullName>
            </value>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>