unpackaged/main/default/objects/Opportunity/fields/Reason_for_Win_Loss__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Win_Loss__c</fullName>
    <label>Reason for Win / Loss</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Business Change</fullName>
            </value>
            <value>
                <fullName>Business Priority or Budget</fullName>
            </value>
            <value>
                <fullName>External Factor</fullName>
            </value>
            <value>
                <fullName>Not a Brightcove Priority</fullName>
            </value>
            <value>
                <fullName>Price to Value (Closed Lost)</fullName>
            </value>
            <value>
                <fullName>Price to Value (Closed Won)</fullName>
            </value>
            <value>
                <fullName>Relationship (Closed Lost)</fullName>
            </value>
            <value>
                <fullName>Relationship (Closed Won)</fullName>
            </value>
            <value>
                <fullName>Salesforce Correction</fullName>
            </value>
            <value>
                <fullName>Technology or Capability (Closed Lost)</fullName>
            </value>
            <value>
                <fullName>Technology or Capability (Closed Won)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>